--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					<div class="image_thumb">
 						<img src="images/DailyJournal Thumbnail.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
-							<a href="#dailyJournal"><i class="fa fa-thumbs-o-up"></i></a>
+							<a href="#dailyJournal"><i class="fa fa-map-marker"></i></a>
 						</div>
 					</div>
 				</div>
@@ -241,10 +241,24 @@
 						rutrum feugiat neque.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/net.png" class="logoTechBlock fa" alt=".Net Logo"></a>
+					<h3>.NET</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Canva.png" class="logoTechBlock fa" alt="Canva Logo"></a>
 					<h3>Canva</h3>
 					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
 						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/aspnetMVC.png" class="logoTechBlock fa" alt="ASP.NET MVC Logo"></a>
+					<h3>ASP.NET MVC</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
+					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Coolors.png" class="logoTechBlock fa" alt="Coolors Logo"></a>
@@ -255,6 +269,12 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/VS Code.png" class="logoTechBlock fa" alt="VS Code Logo"></a>
 					<h3>VS Code</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/VS.png" class="logoTechBlock fa" alt="VS Logo"></a>
+					<h3>Visual Studio</h3>
 					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
 						rutrum feugiat neque.</p>
 				</div>
@@ -302,20 +322,8 @@
 						dis parturient montes.
 					</p>
 				</div>
-				<div class="col-sm-6 col-md-3">
-					<a href="#"><img src="./images/net.png" class="logoTechBlock fa" alt=".Net Logo"></a>
-					<h3>.NET</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
-					</p>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<a href="#"><img src="./images/aspnetMVC.png" class="logoTechBlock fa" alt="ASP.NET MVC Logo"></a>
-					<h3>ASP.NET MVC</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
-					</p>
-				</div>
+
+
 			</div>
 		</div>
 	</section>
@@ -600,7 +608,7 @@
 	<!-- start templatemo education -->
 	<section id="edSection" name="education" class="education">
 		<div class="container">
-			<div class="column">
+			<div class="row">
 				<div class="col-md-2"></div>
 				<div class="">
 					<h2 class="educationTitle">EDUCATION</h2>
@@ -688,7 +696,8 @@
 					<a href="https://teamtreehouse.com/jessicedever1" class="fa"><img alt="treehouse logo"
 							src="./images/treehouse.png" class="treehouse"></a>
 					<a href="https://www.linkedin.com/in/jessicadever1/" class="fa fa-linkedin"></a>
-					<a href="https://github.com/jessicadever1" class="fa fa-globe"></a>
+					<a href="https://github.com/jessicadever1" class="fa"><img alt="gitHub logo" src="images/GitHub.png"
+							class="treehouse"></a>
 				</div>
 				<p>Copyright © 2021 Jess Dever</p>
 			</div>
