--- a/index.html
+++ b/index.html
@@ -347,9 +347,10 @@
 
 				<section class="flexSection" name="">
 
-					<div class="flexClass" id="dailyJournal">
-						<img src="images/DailyJournal.png" class="img-responsive projectImg" alt="team 1">
-						<section class="dailyJournal ps">
+					<div class="flexClass " id="dailyJournal">
+						<img src="images/DailyJournal.png" class="img-responsive projectImg col-sm-6 col-md-3"
+							alt="team 1">
+						<section class="dailyJournal ps ">
 							<h3>Daily Journal</h3>
 							<div class="projectInfo">
 								<p>CLASS PROJECT | </p>
