--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/React.png" class="logoTechBlock fa" alt="React Logo"></a>
 					<h3>React</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>After using vanilla JavaScript for months, was fantastic! We used it starting from Glassdale in the front end, and
+					picked it back up in the backend on the final Tabloid Group Project.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/JavaScript.png" class="logoTechBlock fa" alt="JavaScript Logo"></a>
