fixed ed section

--- a/index.html
+++ b/index.html
@@ -217,9 +217,8 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/React.png" class="logoTechBlock fa" alt="React Logo"></a>
 					<h3>React</h3>
-					<p>After using vanilla JavaScript for months, being able to leave event listeners 
-					behind was kind of wonderful! We used React starting from Glassdale in the front end, and
-					picked it back up in the backend on the final Tabloid Group Project.</p>
+					<p>We used React starting from Glassdale in the front end, and
+						picked it back up in the backend on the final Tabloid Group Project.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/JavaScript.png" class="logoTechBlock fa" alt="JavaScript Logo"></a>
@@ -242,7 +241,7 @@
 						rutrum feugiat neque.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<a href="#"><img src="./images/net.png" class="logoTechBlock fa" alt=".Net Logo"></a>
+					<a href="#"><img src="./images/dotNet.png" class="logoTechBlock fa" alt=".Net Logo"></a>
 					<h3>.NET</h3>
 					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
 						dis parturient montes.
@@ -608,41 +607,42 @@
 	<!-- end templatemo team -->
 
 	<!-- start templatemo education -->
-	<section id="edSection" name="education" class="education">
+	<section id="edSection">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2"></div>
-				<div class="">
+				<div class="col-md-8 text-center">
 					<h2 class="educationTitle">EDUCATION</h2>
 				</div>
-				<div class="edRow">
-					<section class="flexSection postS" id="edBlock" name="">
-						<div class="flexClass" id="education">
-							<img src="./images/NSS.png" class="edPic" alt="NSS Logo">
-							<section class="NSSSection ps">
-								<h3>Nashville Software School</h3>
-								<p>Graduation Date: May 2021</p>
-								<p>HTML | CSS | JavaScript | React | C# .Net | SQL </p>
-								<p>NSS's Full Stack boot camp is an immersive, fully virtual, six month program designed
-									to
-									give me and my classmates the skills required to enter the job market as a junior
-									level
-									web developer.</p>
-							</section>
-						</div>
-					</section>
-					<section class="flexSection ps" id="edBlock" name="">
-						<div class="flexClass" id="education">
-							<img src="./images/UA.png" class="edPic" alt="UA Logo">
-							<section class="USSection ps">
-								<h3>State University of New York at Albany</h3>
-								<p>Graduation Date: May 2010</p>
-								<p>Bachelors of Business Administration, Marketing & Management</p>
+				<div class="col-md-12"></div>
 
-							</section>
-						</div>
-					</section>
-				</div>
+				<section class="col-sm-6 col-md-6">
+					<div class="flexClass" id="education">
+						<img src="./images/NSS.png" class="edPic" alt="NSS Logo">
+						<section class="NSSSection ps">
+							<h3>Nashville Software School</h3>
+							<p>Graduation Date: May 2021</p>
+							<p>HTML | CSS | JavaScript | React | C# .Net | SQL </p>
+							<p>NSS's Full Stack boot camp is an immersive, fully virtual, six month program designed
+								to
+								give me and my classmates the skills required to enter the job market as a junior
+								level
+								web developer.</p>
+						</section>
+					</div>
+				</section>
+				<section class="col-sm-6 col-md-6">
+					<div class="flexClass" id="education">
+						<img src="./images/UA.png" class="edPic" alt="UA Logo">
+						<section class="USSection ps">
+							<h3>State University of New York at Albany</h3>
+							<p>Graduation Date: May 2010</p>
+							<p>Bachelors of Business Administration, Marketing & Management</p>
+
+						</section>
+					</div>
+				</section>
+
 			</div>
 		</div>
 	</section>
