--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 				<div class="col-md-8 text-center">
 					<h2 class="projectsTitle">PROJECTS</h2>
 				</div>
-				<div class="col-md-12"></div>
+				<div class="col-md-12" id="dailyJournal"></div>
 				<section class="col-sm-6 col-md-6">
 
 					<div class="b " id="dailyJournal">
