--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@
 				<div class="col-md-8 text-center">
 					<h2 class="projectsTitle">PROJECTS</h2>
 				</div>
+
+
+
+
 				<div class="col-md-12" id="dailyJournal"></div>
 				<section class="col-sm-6 col-md-6">
 
@@ -381,6 +385,9 @@
 				</section>
 			</div>
 
+
+
+
 			<div class="row">
 				<div class="col-md-2"></div>
 				<section class="col-sm-6 col-md-4">
@@ -414,6 +421,18 @@
 					</div>
 				</section>
 			</div>
+
+
+
+
+			<div class="row">
+
+			</div>
+
+
+
+
+
 		</div>
 
 
