--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
 
 			<div class="row">
-				<div class="col-md-2"></div>
+				<div class="col-md-2" id="recipe"></div>
 				<section class="col-sm-6 col-md-4">
 					<h3>Recipe Cards</h3>
 					<div class="projectInfo">
@@ -426,149 +426,36 @@
 
 
 			<div class="row">
-
-			</div>
-
-
-
-
-
-		</div>
-
-
-
-
-
-		<div class="flexClass" id="HR">
-			<img src="images/HolidayRoad.png" class="img-responsive projectImg" alt="team 2">
-			<section class="ps">
-				<div class="holidayRoadSection">
-					<div class="">
-						<div class="projectDescription">
-							<h3>Holiday Road</h3>
-							<div class="projectInfo">
-								<p>GROUP PROJECT | </p>
-								<a href="https://github.com/jessicadever1/holiday-road-chilly-receptions"
-									class="paddingLeft">
-									View
-									Code</a>
+				<div class="col-md-2"></div>
+				<section class="col-sm-6 col-md-4">
+					<div class="b " id="HR">
+						<img src="images/HolidayRoad.png" class="img-responsive projectImg" alt="team 2">
+					</div>
+				</section>
+				<section class="col-sm-6 col-md-6">
+					<div class="a">
+						<div class="">
+							<div class="projectDescription">
+								<h3>Holiday Road</h3>
+								<div class="projectInfo">
+									<p>GROUP PROJECT | </p>
+									<a href="https://github.com/jessicadever1/holiday-road-chilly-receptions"
+										class="paddingLeft">
+										View
+										Code</a>
+								</div>
+								<p>This project was a collaborative effort of myself and four classmates. We
+									worked together using peer and group programing to plan, build and implement
+									features for a planning app. Features included sorting features to plan a
+									trip location, food options monuments and weather of the day that used an
+									external API. My contributions were the weather feature, and all group
+									efforts.</p>
 							</div>
-							<p>This project was a collaborative effort of myself and four classmates. We
-								worked together using peer and group programing to plan, build and implement
-								features for a planning app. Features included sorting features to plan a
-								trip location, food options monuments and weather of the day that used an
-								external API. My contributions were the weather feature, and all group
-								efforts.</p>
 						</div>
-					</div>
-					<!-- <h4>Technology Used: </h4> -->
-					<div class="techUsed">
-						<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
-						<img src="./images/HTML.png" class="logo" alt="HTML Logo">
-						<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-						<img src="./images/Canva.png" class="logo" alt="Canva Logo">
-						<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
-						<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-						<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-						<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
-						<img src="images/Git.png" class="logo" alt="git logo">
-						<img src="images/GitHub.png" class="logo" alt="github logo">
-					</div>
-			</section>
-
-		</div>
-
-		<div class="flexClass" id="glassdale">
-
-			<section class="glassdale postS">
-				<h3>Glassdale</h3>
-				<div class="projectInfo">
-					<p>CLASS PROJECT | </p>
-					<a href="https://github.com/jessicadever1/glassdale" class="paddingLeft">
-						View
-						Code</a>
-				</div>
-				<p>This project was a learning project completed in class and led by our front-end
-					instructors.
-					This was an exercise in using event listeners, local API's, and more in depth practice
-					in JavaScript.
-				</p>
-				<!-- <h4>Technology Used: </h4> -->
-				<div class="techUsed">
-
-					<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
-					<img src="./images/HTML.png" class="logo" alt="HTML Logo">
-					<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-					<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-					<img src="images/Git.png" class="logo" alt="git logo">
-					<img src="images/GitHub.png" class="logo" alt="github logo">
-
-				</div>
-			</section>
-			<img src="images/glassdale.png" class="img-responsive HRImg" alt="team 1">
-		</div>
-
-
-		<div class="flexClass" id="NS">
-			<img src="images/Nutshell.png" class="img-responsive projectImg" alt="team 1">
-			<section class="nutshellSection ps">
-				<h3>Nutshell</h3>
-				<div class="projectInfo">
-					<p>GROUP PROJECT | </p>
-					<a href="https://github.com/jessicadever1/nutyshell-leaving-the-lights-on-1" class="paddingLeft">
-						View
-						Code</a>
-				</div>
-				<p>This project was a collaborative effort of myself and three classmates. We worked
-					together using individual and group programing to plan, build and implement features for
-					a planning app. Features included forms to schedule events, task lists, favorited news
-					articles, weather of the day that used an external API. My contributions were the
-					weather feature, and the events feature.</p>
-				<!-- <h4>Technology Used: </h4> -->
-				<div class="techUsed">
-
-					<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
-					<img src="./images/HTML.png" class="logo" alt="HTML Logo">
-					<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-					<img src="./images/Canva.png" class="logo" alt="Canva Logo">
-					<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
-					<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-					<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-					<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
-					<img src="images/Git.png" class="logo" alt="git logo">
-					<img src="images/GitHub.png" class="logo" alt="github logo">
-
-				</div>
-			</section>
-		</div>
-
-
-		<div class="flexClass" id="FAF">
-
-			<!-- <h2>Solo Projects</h2> -->
-			<section class="findAFarmerSection postS">
-				<div class="videoPosition">
-
-					<div class="projectDescription fAF">
-						<h3>Find A Farmer</h3>
-						<div class="projectInfo">
-							<p>SOLO PROJECT | </p>
-							<a href="https://github.com/jessicadever1/findAFarmer" class="paddingLeft">
-								View
-								Code</a>
-						</div>
-						<p>This project was a solo project. A CRUD web application, built with React, that
-							allows environmentally minded individuals, who would like to prevent food waste
-							from
-							going to landfills to connect with local pig farmers, who have agreed to welcome
-							visitors to feed food scraps to their pigs. The result being a decrease of food
-							waste entering landfills, and a budget friendly alternative for farmers to be
-							able
-							to provide their pigs with a nutritious diet. </p>
 						<!-- <h4>Technology Used: </h4> -->
 						<div class="techUsed">
-							<img src="./images/React.png" class="logo" alt="React Logo">
-							<img src="./images/Cloudinary.png" class="logo" alt="Cloudinary">
+							<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
+							<img src="./images/HTML.png" class="logo" alt="HTML Logo">
 							<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 							<img src="./images/Canva.png" class="logo" alt="Canva Logo">
 							<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
@@ -578,57 +465,199 @@
 							<img src="images/Git.png" class="logo" alt="git logo">
 							<img src="images/GitHub.png" class="logo" alt="github logo">
 						</div>
-					</div>
-				</div>
-			</section>
-			<iframe class="projectImg HRImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
-				title="YouTube video player" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-		</div>
+				</section>
 
-		<div class="flexClass" id="Tabloid">
-			<img alt="Tabloid Pic" src="./images/Tabloid.PNG" class="img-responsive projectImg">
-			<section class="tabloidSection ps">
-				<div class="videoPosition">
-					<div class="projectDescription fAF">
-						<h3>Tabloid</h3>
+			</div>
+
+
+
+
+			<div class="row">
+				<div class="col-md-2" id="glassdale"></div>
+				<section class="col-sm-6 col-md-4">
+					<h3>Glassdale</h3>
+					<div class="projectInfo">
+						<p>CLASS PROJECT | </p>
+						<a href="https://github.com/jessicadever1/glassdale" class="paddingLeft">
+							View
+							Code</a>
+					</div>
+					<p>This project was a learning project completed in class and led by our front-end
+						instructors.
+						This was an exercise in using event listeners, local API's, and more in depth practice
+						in JavaScript.
+					</p>
+					<!-- <h4>Technology Used: </h4> -->
+					<div class="techUsed">
+
+						<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
+						<img src="./images/HTML.png" class="logo" alt="HTML Logo">
+						<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+						<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+						<img src="images/Git.png" class="logo" alt="git logo">
+						<img src="images/GitHub.png" class="logo" alt="github logo">
+
+					</div>
+				</section>
+				<section class="col-sm-6 col-md-6">
+					<div class="b">
+						<img src="images/glassdale.png" class="img-responsive HRImg" alt="team 1">
+					</div>
+				</section>
+			</div>
+
+
+
+
+			<div class="row">
+				<div class="col-md-2"></div>
+				<section class="col-sm-6 col-md-4">
+					<div class="b" id="NS">
+						<img src="images/Nutshell.png" class="img-responsive projectImg" alt="team 1">
+					</div>
+				</section>
+				<section class="col-sm-6 col-md-6">
+					<div class="a">
+						<h3>Nutshell</h3>
 						<div class="projectInfo">
 							<p>GROUP PROJECT | </p>
-							<a href="https://github.com/jessicadever1/tabloidmvc-missing-persons" class="paddingLeft">
+							<a href="https://github.com/jessicadever1/nutyshell-leaving-the-lights-on-1"
+								class="paddingLeft">
 								View
 								Code</a>
 						</div>
-						<p>This was a group project that was an awesome collaborative effort of me and three
-							great classmates. We worked together to complete the issue tickets primarily via
-							pair and individual programing. Built in C#, Tabloid is a full CRUD, multi-user,
-							ASP.NET Core MVC web application featuring blog posts, that comments and tags
-							can
-							be added to. </p>
+						<p>This project was a collaborative effort of myself and three classmates. We worked
+							together using individual and group programing to plan, build and implement features for
+							a planning app. Features included forms to schedule events, task lists, favorited news
+							articles, weather of the day that used an external API. My contributions were the
+							weather feature, and the events feature.</p>
 						<!-- <h4>Technology Used: </h4> -->
 						<div class="techUsed">
+
+							<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
+							<img src="./images/HTML.png" class="logo" alt="HTML Logo">
+							<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+							<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+							<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
+							<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+							<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+							<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
 							<img src="images/Git.png" class="logo" alt="git logo">
 							<img src="images/GitHub.png" class="logo" alt="github logo">
-							<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-							<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-							<img src="./images/aspnetMVC.png" class="logo" alt="MVC logo">
-							<img src="./images/C.png" class="logo" alt="C# logo">
-							<img src="/images/NET.png" class="logo" alt=".Net Logo">
-							<img src="./images/SQL.png" class="logo" alt="SQL Logo">
-							<img src="./images/VS.png" class="logo" alt="VS Logo">
+
 						</div>
 					</div>
-				</div>
-			</section>
-		</div>
+				</section>
+			</div>
+
+
+
+
+			<div class="row">
+				<div class="col-md-2" id="FAF"></div>
+				<section class="col-sm-6 col-md-4">
+					<div class="videoPosition">
+						<div class="projectDescription fAF">
+							<h3>Find A Farmer</h3>
+							<div class="projectInfo">
+								<p>SOLO PROJECT | </p>
+								<a href="https://github.com/jessicadever1/findAFarmer" class="paddingLeft">
+									View
+									Code</a>
+							</div>
+							<p>This project was a solo project. A CRUD web application, built with React, that
+								allows environmentally minded individuals, who would like to prevent food waste
+								from
+								going to landfills to connect with local pig farmers, who have agreed to welcome
+								visitors to feed food scraps to their pigs. The result being a decrease of food
+								waste entering landfills, and a budget friendly alternative for farmers to be
+								able
+								to provide their pigs with a nutritious diet. </p>
+							<!-- <h4>Technology Used: </h4> -->
+							<div class="techUsed">
+								<img src="./images/React.png" class="logo" alt="React Logo">
+								<img src="./images/Cloudinary.png" class="logo" alt="Cloudinary">
+								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+								<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+								<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
+								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+								<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="col-sm-6 col-md-6">
+					<div class="a">
+						<iframe class="projectImg HRImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen>
+						</iframe>
+					</div>
+				</section>
+			</div>
+
+
+
+			<div class="row">
+				<div class="col-md-2"></div>
+				<section class="col-sm-6 col-md-4">
+					<div class="b" id="Tabloid">
+						<img alt="Tabloid Pic" src="./images/Tabloid.PNG" class="img-responsive projectImg">
+					</div>
+				</section>
+				<section>
+
+				</section>
+
+
+
+			</div>
+
+
+
+
+			<div class="flexClass" id="Tabloid">
+
+				<section class="tabloidSection ps">
+					<div class="videoPosition">
+						<div class="projectDescription fAF">
+							<h3>Tabloid</h3>
+							<div class="projectInfo">
+								<p>GROUP PROJECT | </p>
+								<a href="https://github.com/jessicadever1/tabloidmvc-missing-persons"
+									class="paddingLeft">
+									View
+									Code</a>
+							</div>
+							<p>This was a group project that was an awesome collaborative effort of me and three
+								great classmates. We worked together to complete the issue tickets primarily via
+								pair and individual programing. Built in C#, Tabloid is a full CRUD, multi-user,
+								ASP.NET Core MVC web application featuring blog posts, that comments and tags
+								can
+								be added to. </p>
+							<!-- <h4>Technology Used: </h4> -->
+							<div class="techUsed">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
+								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+								<img src="./images/aspnetMVC.png" class="logo" alt="MVC logo">
+								<img src="./images/C.png" class="logo" alt="C# logo">
+								<img src="/images/NET.png" class="logo" alt=".Net Logo">
+								<img src="./images/SQL.png" class="logo" alt="SQL Logo">
+								<img src="./images/VS.png" class="logo" alt="VS Logo">
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
 
 	</section>
 
-	<!-- <div class="col-sm-6 col-md-3 flexClass">
-							<img src="images/member4.jpg" class="img-responsive" alt="team 4">
-							<h3>LINDA</h3>
-							<p>MANAGER</p>
-						</div> -->
 
 	</div>
 	</div>
