fixing mobile view

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 				<div class="col-md-12" id="dailyJournal"></div>
 				<section class="col-sm-6 col-md-6">
 
-					<div class="b " id="dailyJournal">
+					<div class="b">
 						<img src="images/DailyJournal.png" class="img-responsive projectImg col-sm-6 col-md-3"
 							alt="team 1">
 					</div>
@@ -389,8 +389,8 @@
 
 
 			<div class="row">
-				<div class="col-md-2" id="recipe"></div>
-				<section class="col-sm-6 col-md-4">
+				<div class="col-md-12" id="recipe"></div>
+				<section class="col-sm-6 col-md-6">
 					<h3>Recipe Cards</h3>
 					<div class="projectInfo">
 						<p>PRACTICE PROJECT | </p>
@@ -609,53 +609,35 @@
 						<img alt="Tabloid Pic" src="./images/Tabloid.PNG" class="img-responsive projectImg">
 					</div>
 				</section>
-				<section>
-
-				</section>
-
-
-
-			</div>
-
-
-
-
-			<div class="flexClass" id="Tabloid">
-
-				<section class="tabloidSection ps">
-					<div class="videoPosition">
-						<div class="projectDescription fAF">
-							<h3>Tabloid</h3>
-							<div class="projectInfo">
-								<p>GROUP PROJECT | </p>
-								<a href="https://github.com/jessicadever1/tabloidmvc-missing-persons"
-									class="paddingLeft">
-									View
-									Code</a>
-							</div>
-							<p>This was a group project that was an awesome collaborative effort of me and three
-								great classmates. We worked together to complete the issue tickets primarily via
-								pair and individual programing. Built in C#, Tabloid is a full CRUD, multi-user,
-								ASP.NET Core MVC web application featuring blog posts, that comments and tags
-								can
-								be added to. </p>
-							<!-- <h4>Technology Used: </h4> -->
-							<div class="techUsed">
-								<img src="images/Git.png" class="logo" alt="git logo">
-								<img src="images/GitHub.png" class="logo" alt="github logo">
-								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-								<img src="./images/aspnetMVC.png" class="logo" alt="MVC logo">
-								<img src="./images/C.png" class="logo" alt="C# logo">
-								<img src="/images/NET.png" class="logo" alt=".Net Logo">
-								<img src="./images/SQL.png" class="logo" alt="SQL Logo">
-								<img src="./images/VS.png" class="logo" alt="VS Logo">
-							</div>
-						</div>
+				<section class="col-sm-6 col-md-6">
+					<h3>Tabloid</h3>
+					<div class="projectInfo">
+						<p>GROUP PROJECT | </p>
+						<a href="https://github.com/jessicadever1/tabloidmvc-missing-persons" class="paddingLeft">
+							View
+							Code</a>
+					</div>
+					<p>This was a group project that was an awesome collaborative effort of me and three
+						great classmates. We worked together to complete the issue tickets primarily via
+						pair and individual programing. Built in C#, Tabloid is a full CRUD, multi-user,
+						ASP.NET Core MVC web application featuring blog posts, that comments and tags
+						can
+						be added to. </p>
+					<!-- <h4>Technology Used: </h4> -->
+					<div class="techUsed">
+						<img src="images/Git.png" class="logo" alt="git logo">
+						<img src="images/GitHub.png" class="logo" alt="github logo">
+						<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+						<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+						<img src="./images/aspnetMVC.png" class="logo" alt="MVC logo">
+						<img src="./images/C.png" class="logo" alt="C# logo">
+						<img src="/images/NET.png" class="logo" alt=".Net Logo">
+						<img src="./images/SQL.png" class="logo" alt="SQL Logo">
+						<img src="./images/VS.png" class="logo" alt="VS Logo">
 					</div>
 				</section>
 			</div>
-
+		</div>
 	</section>
 
 
