fixing mobile view

--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
 
 
 			<div class="row">
-				<div class="col-md-2"></div>
-				<section class="col-sm-6 col-md-4">
-					<div class="b " id="HR">
+				<div class="col-md-12" id="HR"></div>
+				<section class="col-sm-6 col-md-6">
+					<div class="b">
 						<img src="images/HolidayRoad.png" class="img-responsive projectImg" alt="team 2">
 					</div>
 				</section>
@@ -473,8 +473,8 @@
 
 
 			<div class="row">
-				<div class="col-md-2" id="glassdale"></div>
-				<section class="col-sm-6 col-md-4">
+				<div class="col-md-12" id="glassdale"></div>
+				<section class="col-sm-6 col-md-6">
 					<h3>Glassdale</h3>
 					<div class="projectInfo">
 						<p>CLASS PROJECT | </p>
@@ -501,7 +501,7 @@
 				</section>
 				<section class="col-sm-6 col-md-6">
 					<div class="b">
-						<img src="images/glassdale.png" class="img-responsive HRImg" alt="team 1">
+						<img src="images/glassdale.png" class="img-responsive" alt="team 1">
 					</div>
 				</section>
 			</div>
