--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@
 
 
 			<div class="row">
-				<div class="col-md-2"></div>
-				<section class="col-sm-6 col-md-4">
-					<div class="b" id="NS">
+				<div class="col-md-12" id="NS"></div>
+				<section class="col-sm-6 col-md-6">
+					<div class="b">
 						<img src="images/Nutshell.png" class="img-responsive projectImg" alt="team 1">
 					</div>
 				</section>
