finished projects mobile view

--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
 
 
 			<div class="row">
-				<div class="col-md-2" id="FAF"></div>
-				<section class="col-sm-6 col-md-4">
+				<div class="col-md-12" id="FAF"></div>
+				<section class="col-sm-6 col-md-6">
 					<div class="videoPosition">
 						<div class="projectDescription fAF">
 							<h3>Find A Farmer</h3>
@@ -591,7 +591,7 @@
 				</section>
 				<section class="col-sm-6 col-md-6">
 					<div class="a">
-						<iframe class="projectImg HRImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
+						<iframe class="projectImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
 							title="YouTube video player" frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen>
@@ -603,9 +603,9 @@
 
 
 			<div class="row">
-				<div class="col-md-2"></div>
-				<section class="col-sm-6 col-md-4">
-					<div class="b" id="Tabloid">
+				<div class="col-md-12" id="Tabloid"></div>
+				<section class="col-sm-6 col-md-6">
+					<div class="b">
 						<img alt="Tabloid Pic" src="./images/Tabloid.PNG" class="img-responsive projectImg">
 					</div>
 				</section>
