--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 				<ul class="slides">
 
-					<li>
+					<div class="profileCenter">
 						<img src="images/slider/1.jpg" alt="Slide 1">
 						<div class="slider-caption">
 							<img id="profilePicture" src="images/jessProfilePic.png" alt="profile picture">
@@ -66,27 +66,7 @@
 								<!-- <a href="#portfolio" class="smoothScroll templatemo-slider-btn btn btn-default">Learn More</a> -->
 							</div>
 						</div>
-					</li>
-					<!-- <li>
-				<img src="images/slider/2.jpg" alt="Slide 2">
-				<div class="slider-caption">
-					<div class="templatemo_homewrapper">
-					<h1>Flex Slider, CSS Flexbox</h1>
-					<h2>Work on all modern browsers, IE 10+</h2>
-						<a href="#team" class="smoothScroll templatemo-slider-btn btn btn-default">Meet Our Team</a>	
 					</div>
-				</div>
-			</li>
-			<li>
-				<img src="images/slider/3.jpg" alt="Slide 3">
-				<div class="slider-caption">
-					<div class="templatemo_homewrapper">
-						<h1>Special Thanks</h1>
-						<h2>unsplash.com, flexslider, bootstrap, jquery</h2>
-						<a href="#about" class="smoothScroll templatemo-slider-btn btn btn-default">About Us</a>	
-					</div>
-				</div>
-			</li> -->
 				</ul>
 			</div>
 		</div>
@@ -223,60 +203,60 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/JavaScript.png" class="logoTechBlock fa" alt="JavaScript Logo"></a>
 					<h3>JavaScript</h3>
-					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Cum sociis natoque penatibus et magnis
-						dis parturient montes.</p>
+					<p>Pre-work was kicked off with JavaScript, and we dug into
+						it further throughout the front-end.
+					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/HTML.png" class="logoTechBlock fa" alt="HTML Logo"></a>
 					<h3>
 						HTML5
 					</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.</p>
+					<p>Divs. Articles. Sections. What's not to like.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/CSS.png" class="logoTechBlock fa" alt="CSS Logo"></a>
 					<h3>CSS3</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>Some people hate it. Some people love it. I am among the latter.
+						If you love the backend: you're welcome.
+					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/dotNet.png" class="logoTechBlock fa" alt=".Net Logo"></a>
 					<h3>.NET</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
+					<p>Dear Microsoft: is there a position open in your naming department?
+						If not, can there be?
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Canva.png" class="logoTechBlock fa" alt="Canva Logo"></a>
 					<h3>Canva</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>Between photoshop and canva. I'll take Canva with a small side
+						of photoshop.
+					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/aspnetMVC.png" class="logoTechBlock fa" alt="ASP.NET MVC Logo"></a>
 					<h3>ASP.NET MVC</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
+					<p>Dear Microsoft, again with the naming thing. Really?
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Coolors.png" class="logoTechBlock fa" alt="Coolors Logo"></a>
 					<h3>Coolers</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>Where every css project starts: the color pallet. Thank you, coolers.
+						You rock.
+					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/VS Code.png" class="logoTechBlock fa" alt="VS Code Logo"></a>
 					<h3>VS Code</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>Code . </p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/VS.png" class="logoTechBlock fa" alt="VS Logo"></a>
 					<h3>Visual Studio</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>VS, you sure are wonderful. But when is autosave going to be available?</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/dbDiagram.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
@@ -304,22 +284,19 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Git.png" class="logoTechBlock fa" alt="Git Logo"></a>
 					<h3>Git</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
+					<p>You know you might be new to git, if you keep accidentally typing get.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/GitHub.png" class="logoTechBlock fa" alt="GitHub Logo"></a>
 					<h3>GitHub</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
+					<p>Is anyone else amazed that this awesome resource is free? Thank you, GitHub!
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/C.png" class="logoTechBlock fa" alt="C# Logo"></a>
 					<h3>C#</h3>
-					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
-						dis parturient montes.
+					<p>I may wear glasses, but I can still C#.
 					</p>
 				</div>
 
