--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<a href="#"><img src="./images/React.png" class="logoTechBlock fa" alt="React Logo"></a>
 					<h3>React</h3>
 					<p>We used React starting from Glassdale in the front end, and
-						picked it back up in the backend on the final Tabloid Group Project.</p>
+						picked it back up in the backend on the final Group Project.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/JavaScript.png" class="logoTechBlock fa" alt="JavaScript Logo"></a>
@@ -225,7 +225,7 @@
 					<a href="#"><img src="./images/dotNet.png" class="logoTechBlock fa" alt=".Net Logo"></a>
 					<h3>.NET</h3>
 					<p>Dear Microsoft: is there a position open in your naming department?
-						If not, can there be?
+						If not, how come?
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
