--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 					<p><i class="fa fa-map-marker"></i> Nashville, TN</p>
 				</div>
 				<div class="col-sm-6 col-md-8">
-					<form action="#" method="post" role="form">
+					<form action="mailto:jessicadever1@gmail.com" method="post" role="form">
 						<div class="col-md-6">
 							<input type="text" class="form-control" placeholder="Name">
 						</div>
